# giteyes

./: .gitignore  Procfile  README.fr.md  README.md  pyproject.toml  requirements.txt  versel.json
src/giteyes/: interface.py  scripts.py  utils.py
src/giteyes/templates/: error.html  index.html  markdown-viewer.html  preview-template.html
tests/: test_utils.py
